--- a/api/docker-compose.yaml
+++ b/api/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
 
-  api:
+  gces_back:
     container_name: api_service
     build: .
     restart: always
