Ajustando pipeline de testes do backend

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,10 +54,9 @@ testBackend:
     - pip install pytest
     - pip install -r requirements.txt
   script:
-    - cd api/
-    - python ./manage.py makemigrations
-    - python ./manage.py migrate
-    - python ./manage.py test
+    - python ./api/manage.py makemigrations
+    - python ./api/manage.py migrate
+    - python ./api/manage.py test
 
 lintBackend:
   image: python:3.9
