testando pipeline de testes backend

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,41 +1,39 @@
-image: node:12
-
 stages:
-  - build
+  # - build
   - test
-  - lint
+#   - lint
 
-buildFrontend:
-  stage: build
-  image: docker:stable
-  services:
-    - docker:stable-dind
-  script:
-    - cd client/
-    - docker build -t gces_front:latest .
+# buildFrontend:
+#   stage: build
+#   image: docker:stable
+#   services:
+#     - docker:stable-dind
+#   script:
+#     - cd client/
+#     - docker build -t gces_front:latest .
 
-testFrontend:
-  stage: test
-  script:
-    - cd client/
-    - yarn global add @vue/cli && yarn global add @quasar/cli
-    - quasar test --unit jest --dev="-m pwa"
+# testFrontend:
+#   stage: test
+#   script:
+#     - cd client/
+#     - yarn global add @vue/cli && yarn global add @quasar/cli
+#     - quasar test --unit jest --dev="-m pwa"
 
-lintFrontend:
-  stage: lint
-  image: node:12-alpine
-  script:
-    - cd client/
-    - yarn && yarn lint
+# lintFrontend:
+#   stage: lint
+#   image: node:12-alpine
+#   script:
+#     - cd client/
+#     - yarn && yarn lint
 
-buildBackend:
-  stage: build
-  image: docker:stable
-  services:
-    - docker:stable-dind
-  script:
-    - cd api/
-    - docker build -t gces_back:latest .
+# buildBackend:
+#   stage: build
+#   image: docker:stable
+#   services:
+#     - docker:stable-dind
+#   script:
+#     - cd api/
+#     - docker build -t gces_back:latest .
 
 testBackend:
   image: python:3.9
@@ -53,16 +51,16 @@ testBackend:
     - pip install pytest
     - pip install -r ./api/requirements.txt
   script:
-    - python ./api/manage.py makemigrations
-    - python ./api/manage.py migrate
-    - python ./api/manage.py test
+    - ./api/manage.py makemigrations
+    - ./api/manage.py migrate
+    - ./api/manage.py test
 
-lintBackend:
-  image: python:3.9
-  stage: lint
-  before_script:
-    - pip install pylint
-  script:
-    - cd api/
-    - pylint api/
-    - pylint task/
+# lintBackend:
+#   image: python:3.9
+#   stage: lint
+#   before_script:
+#     - pip install pylint
+#   script:
+#     - cd api/
+#     - pylint api/
+#     - pylint task/
