--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 stages:
   # - build
-  - test
-#   - lint
+  # - test
+  - lint
 
 # buildFrontend:
 #   stage: build
@@ -19,12 +19,12 @@ stages:
 #     - yarn global add @vue/cli && yarn global add @quasar/cli
 #     - quasar test --unit jest --dev="-m pwa"
 
-# lintFrontend:
-#   stage: lint
-#   image: node:12-alpine
-#   script:
-#     - cd client/
-#     - yarn && yarn lint
+lintFrontend:
+  stage: lint
+  image: node:12-alpine
+  script:
+    - cd client/
+    - yarn && yarn lint
 
 # buildBackend:
 #   stage: build
@@ -35,32 +35,32 @@ stages:
 #     - cd api/
 #     - docker build -t gces_back:latest .
 
-testBackend:
-  image: python:3.9
-  stage: test
-  services:
-    - postgres:latest
-  variables:
-    POSTGRES_DB: myproject
-    POSTGRES_USER: myuser
-    POSTGRES_PASSWORD: password
-    DB_HOST: postgres
-    DB_USER: myuser
-    DB_PASS: password
-  before_script:
-    - pip install pytest
-    - pip install -r ./api/requirements.txt
-  script:
-    - ./api/manage.py makemigrations
-    - ./api/manage.py migrate
-    - ./api/manage.py test
-
-# lintBackend:
+# testBackend:
 #   image: python:3.9
-#   stage: lint
+#   stage: test
+#   services:
+#     - postgres:latest
+#   variables:
+#     POSTGRES_DB: myproject
+#     POSTGRES_USER: myuser
+#     POSTGRES_PASSWORD: password
+#     DB_HOST: postgres
+#     DB_USER: myuser
+#     DB_PASS: password
 #   before_script:
-#     - pip install pylint
+#     - pip install pytest
+#     - pip install -r ./api/requirements.txt
 #   script:
-#     - cd api/
-#     - pylint api/
-#     - pylint task/
+#     - ./api/manage.py makemigrations
+#     - ./api/manage.py migrate
+#     - ./api/manage.py test
+
+lintBackend:
+  image: python:3.9
+  stage: lint
+  before_script:
+    - pip install pylint
+  script:
+    - cd api/
+    - pylint api/
+    - pylint task/
